<resources>
    <string name="app_name">My Festivals</string>
    <string name="button_addFestival">Add Festival</string>
    <string name="hint_festivalTitle">Festival Title</string>
    <string name="hint_festivalDescription">Description</string>
    <string name="hint_festivalDate">Date</string>
    <string name="value_for_money">Value for Money:</string>
    <string name="accessibility">Accessibility:</string>
    <string name="family_friendliness">Family Friendliness:</string>
    <string name="menu_addFestival">Add</string>
    <string name="save_festival"> Save Festival</string>
    <string name="menu_cancelFestival">Cancel</string>
    <string name="enter_festival_title"> Please enter a Festival Title </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_festival_image">Select festival image</string>
    <string name="change_festival_image">Change festival image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="menu_deleteFestival">Delete</string>
    <string name="title_activity_festival_maps">Map of All Festivals </string>
    <string name="menu_signUp">Sign Up</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="search_hint">Search festivals...</string>
    <string name="search">Search</string>

</resources>