<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_addFestival"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_map"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/menu_addFestival"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />


    <item
        android:id="@+id/item_signUp"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_signUp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/item_login"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/menu_login"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_logout"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/menu_logout"
        app:showAsAction="ifRoom"/>

</menu>